--- a/src/main/resources/com/example/checkersapp/startView.fxml
+++ b/src/main/resources/com/example/checkersapp/startView.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="93.0" layoutY="43.0" text="Welcome To Checkers!">
          <font>
@@ -13,7 +14,12 @@
          </font>
       </Label>
       <Label layoutX="43.0" layoutY="118.0" text="Join Server:" />
-      <TextField layoutX="118.0" layoutY="114.0" promptText="Server Adress" />
+      <TextField layoutX="118.0" layoutY="114.0" promptText="Server Address" />
       <TextField layoutX="300.0" layoutY="115.0" promptText="Server Port" />
+      <Label layoutX="23.0" layoutY="249.0" prefHeight="17.0" prefWidth="84.0" text="Create Server:" />
+      <TextField layoutX="307.0" layoutY="245.0" promptText="Port" />
+      <Button layoutX="320.0" layoutY="200.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="135.0" text="Generate Port" />
+      <TextField layoutX="118.0" layoutY="245.0" promptText="Server Address" />
+      <Button layoutX="142.0" layoutY="200.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" text="Pull Address" />
    </children>
 </Pane>
