--- a/src/main/resources/com/example/checkersapp/playView.fxml
+++ b/src/main/resources/com/example/checkersapp/playView.fxml
@@ -20,7 +20,7 @@
       <Rectangle fx:id="a2" arcHeight="5.0" arcWidth="5.0" fill="#e785ff" height="65.0" layoutX="51.0" layoutY="467.0" stroke="#e785ff" strokeMiterLimit="0.0" strokeType="INSIDE" width="63.0" />
       <Rectangle fx:id="a1" arcHeight="5.0" arcWidth="5.0" fill="#90ff92" height="65.0" layoutX="51.0" layoutY="532.0" stroke="#90ff92" strokeMiterLimit="0.0" strokeType="INSIDE" width="63.0" />
       <Rectangle fx:id="b7" arcHeight="5.0" arcWidth="5.0" fill="#e785ff" height="65.0" layoutX="114.0" layoutY="142.0" stroke="#e785ff" strokeMiterLimit="0.0" strokeType="INSIDE" width="63.0" />
-      <Rectangle fx:id="b8" arcHeight="5.0" arcWidth="5.0" fill="#90ff92" height="65.0" layoutX="114.0" layoutY="77.0" stroke="#90ff92" strokeMiterLimit="0.0" strokeType="INSIDE" width="63.0" />
+      <Rectangle fx:id="b8" arcHeight="5.0" arcWidth="5.0" fill="#90ff92" height="65.0" layoutX="114.0" layoutY="77.0" onMouseClicked="#b8Clicked" stroke="#90ff92" strokeMiterLimit="0.0" strokeType="INSIDE" width="63.0" />
       <Rectangle fx:id="b5" arcHeight="5.0" arcWidth="5.0" fill="#e785ff" height="65.0" layoutX="114.0" layoutY="272.0" stroke="#e785ff" strokeMiterLimit="0.0" strokeType="INSIDE" width="63.0" />
       <Rectangle fx:id="b6" arcHeight="5.0" arcWidth="5.0" fill="#90ff92" height="65.0" layoutX="114.0" layoutY="207.0" stroke="#90ff92" strokeMiterLimit="0.0" strokeType="INSIDE" width="63.0" />
       <Rectangle fx:id="b3" arcHeight="5.0" arcWidth="5.0" fill="#e785ff" height="65.0" layoutX="114.0" layoutY="402.0" stroke="#e785ff" strokeMiterLimit="0.0" strokeType="INSIDE" width="63.0" />
@@ -156,7 +156,7 @@
          </font>
       </Label>
       <TextField layoutX="596.0" layoutY="606.0" prefHeight="23.0" prefWidth="182.0" promptText="Text Opponent Here..." />
-      <Circle fx:id="l1" fill="DODGERBLUE" layoutX="146.0" layoutY="110.0" onMouseClicked="#l1movement" radius="24.0" stroke="BLACK" strokeType="INSIDE" />
+      <Circle fx:id="l1" fill="DODGERBLUE" layoutX="146.0" layoutY="110.0" onMouseClicked="#pieceClicked" radius="24.0" stroke="BLACK" strokeType="INSIDE" />
       <Circle fx:id="l5" fill="DODGERBLUE" layoutX="83.0" layoutY="175.0" onMouseClicked="#l5movement" radius="24.0" stroke="BLACK" strokeType="INSIDE" />
       <Circle fx:id="l9" fill="DODGERBLUE" layoutX="146.0" layoutY="240.0" onMouseClicked="#l9movement" radius="24.0" stroke="BLACK" strokeType="INSIDE" />
       <Circle fx:id="l6" fill="DODGERBLUE" layoutX="209.0" layoutY="175.0" onMouseClicked="#l6movement" radius="24.0" stroke="BLACK" strokeType="INSIDE" />
